--- a/server/src/styles/index.css
+++ b/server/src/styles/index.css
@@ -5,10 +5,18 @@
 #sandbox {
     align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     height: 100vh;
     max-height: 100vh;
     max-width: 100vw;
     padding: 0.5rem;
     width: 100%;
+}
+
+.box {
+    border: 1px solid #000000;
+    box-shadow: 0px 5px 5px #5D6D7E;
+    min-height: 10rem;
+    min-width: 10rem;
 }
