--- a/server/src/styles/index.css
+++ b/server/src/styles/index.css
@@ -1,22 +1,63 @@
 :root {
+    --grid-box-size: calc((100vw - 2rem - 2rem - (7 * 0.5rem)) / 8);
+
     font-size: 16px;
+}
+
+body {
+    height: 100vh;
+    margin: 0;
+    width: 100vw;
+}
+
+#sandbox,
+.box,
+.grid {
+    box-sizing: border-box;
+    position: relative;
+}
+
+#sandbox,
+#sandbox > .box {
+    display: flex;
+    flex-direction: column;
 }
 
 #sandbox {
     align-items: center;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
-    height: 100vh;
-    max-height: 100vh;
-    max-width: 100vw;
+    height: auto;
+    margin: 0.5rem;
+    max-width: 100%;
     padding: 0.5rem;
-    width: 100%;
+    width: auto;
 }
 
 .box {
     border: 1px solid #000000;
     box-shadow: 0px 5px 5px #5D6D7E;
-    min-height: 10rem;
-    min-width: 10rem;
+    flex: 1;
+    justify-content: stretch;
+    height: auto;
+    width: 100%;
+}
+
+.grid {
+    background-color: #6E2C00;
+    border: 2px solid #000000;
+    display: grid;
+    gap: 0.5rem;
+    height: auto;
+    padding: 1rem;
+    width: 100%;
+}
+
+.grid .box {
+    box-shadow: 0px 2px 5px #5D6D7E;
+    box-sizing: border-box;
+    height: var(--grid-box-size);
+    min-height: 5rem;
+    min-width: 5rem;
+    padding: 0.25rem;
+    width: var(--grid-box-size);
 }
