--- a/server/src/styles/index.css
+++ b/server/src/styles/index.css
@@ -53,11 +53,30 @@ body {
 }
 
 .grid .box {
+    align-items: center;
     box-shadow: 0px 2px 5px #5D6D7E;
     box-sizing: border-box;
+    display: flex;
     height: var(--grid-box-size);
+    justify-content: center;
     min-height: 5rem;
     min-width: 5rem;
     padding: 0.25rem;
     width: var(--grid-box-size);
+}
+
+.coords {
+    left: 0;
+    padding: 0.25rem;
+    position: absolute;
+    top: 0;
+}
+
+.piece {
+    align-items: center;
+    display: flex;
+    font-size: 4rem;
+    /* height: 2rem; */
+    justify-content: center;
+    /* width: 2rem; */
 }
