Move main program code to main.js, update script src in index.html, small style change

--- a/server/src/styles/index.css
+++ b/server/src/styles/index.css
@@ -48,6 +48,8 @@ body {
     display: grid;
     gap: 0.5rem;
     height: auto;
+    max-height: 62rem;
+    max-width: 62rem;
     padding: 1rem;
     width: 100%;
 }
